--- a/src/components/global-component-styles.scss
+++ b/src/components/global-component-styles.scss
@@ -1,4 +1,115 @@
 .timer {
+  display: flex;
+  flex-direction: row;
+}
+.shadow {
+  z-index: 1;
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: rgba($color: #000000, $alpha: 0.7);
+  align-items: center;
+  .wrapper {
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    background: -webkit-linear-gradient(top, #7579ff, #472581);
+    background: -o-linear-gradient(top, #7579ff, #472581);
+    background: -moz-linear-gradient(top, #7579ff, #472581);
+    background: linear-gradient(top, #7579ff, #472581);
+  }
+  .modal {
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    font-family: "Nunito-ExtraBold";
+    src: local("Nunito-ExtraBold"),
+      url("../__shared/fonts/Nunito-ExtraBold.ttf") format("ttf");
+    background: #9152f8;
+    background: -webkit-linear-gradient(top, #7579ff, #472581);
+    z-index: 1;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    * {
+      background-color: inherit;
+    }
+    .modal-header {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        color: white;
+        height: 150px;
+        font-size: 25px;
+        padding-top: 50px;
+        img {
+            height: 60px;
+            margin-bottom: 40px;
+          }
+    }
+    .modal-content {
+        width: 270px;
+        & div {
+            width: 100%;
+        }
+        .modal-input {
+            margin-top: 20px;
+            width: 100%;
+        color: white;
+
+        }
+    }
+    
+    
+    .modal-footer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        div{
+            padding: 10px 15px 10px 15px;
+            width: 270px;
+            display: flex;
+            justify-content: center;
+            align-self: center;
+            color: white;
+            font-weight: 900;
+            border: 4px solid white;
+            margin-top: 20px;
+            font-size: 15px;
+        }
+    }
+    
+  }
+}
+.alertModal {
+  position: fixed;
+  background-color: #442342;
+  z-index: 5;
+  width: 80%;
+  height: 200px;
+  top: 50px;
+  left: 0;
+  margin: auto;
+  right: 0;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  p {
+    color: white;
+  }
+  
+
 }
