--- a/src/pages/AuthPage/index.module.scss
+++ b/src/pages/AuthPage/index.module.scss
@@ -1,39 +1,52 @@
 .authPage {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: purple;
+  background: url("./media/back.png");
+  background-position: center;
+  background-size: cover;
+  .header {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10%;
+    width: 80%;
+    .logoText {
+      height: 60px;
+    }
+    .logoCar {
+      height: 50px;
+      margin-top: 45px;
+      align-self: flex-end;
+    }
+  }
+  .buttonGroup {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: center;
-    background-color: purple;
-    .header {
-        display: flex;
-        flex-direction: column;
-        .logoText {
-            height: 60px;
-        }
-        .logoCar {
-            height: 50px;
-            margin-top: 35px;
-            align-self: flex-end;
-        }
+    min-height: 200px;
+    // font-family: url('../../__shared/fonts/Nunito-ExtraBold.ttf');
+    font-family: "Nunito-ExtraBold";
+    src: local("Nunito-ExtraBold"),
+      url("../../__shared/fonts/Nunito-ExtraBold.ttf") format("ttf");
+    & div {
+      padding: 10px 15px 10px 15px;
+      width: 270px;
+      display: flex;
+      justify-content: center;
+      align-self: center;
+      color: white;
+      font-size: 25px;
+      font-weight: 900;
     }
-    .buttonGroup {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        min-height: 200px;
-        & div {
-            padding: 20px 10px 20px 10px;
-            width: 250px;
-            background-color: red;
-            display: flex;
-            justify-content: center;
-            align-self: center;
-            color: white;
-        }
-        .signIn {
-            border: 1px solid white;
-        }
+    .signUp {
+      background-color: #472581;
     }
+    .signIn {
+      border: 5px solid #472581;
+    }
+  }
 }
