--- a/src/pages/BriefingPage/index.module.scss
+++ b/src/pages/BriefingPage/index.module.scss
@@ -44,4 +44,10 @@
             color: white;
         }
     }
+    .startQuestLink {
+        margin-bottom: 25%;
+        margin-left: 10%;
+        color:purple;
+        font-size: 20px;
+    }
 }
