--- a/src/pages/AdminPage/index.module.scss
+++ b/src/pages/AdminPage/index.module.scss
@@ -1,4 +1,14 @@
 .AdminPage {
     width: 100%;
     height: 100%;
+    .ant-layout {
+        min-height: 100%;
+    }
+    .AdminContent {
+        display: flex;
+        justify-content: center;
+    }
+}
+.minHeight100 {
+    min-height: 100% !important;
 }
