--- a/src/pages/AdminPage/adminPages/index.module.scss
+++ b/src/pages/AdminPage/adminPages/index.module.scss
@@ -1,6 +1,7 @@
 .TaskPage {
     .taskWithHelps {
         border-bottom: 1px black solid;
+        cursor: pointer;
     }
     .taskRow {
         padding: 5px 20px;
@@ -21,7 +22,7 @@
     display: flex;
     flex-direction: row;
     div {
-        width: 300px;
+        width: 200px;
         font-size: 20px;
     }
 }
@@ -36,4 +37,20 @@
 }
 .list .item:nth-child(2n) {
     background: white;
+}
+.taskInfo {
+    padding: 5px 20px;
+    font-size: 25px;
+    margin-bottom: 30px;
+    .row {
+        display: flex;
+        flex-direction: row;
+        border-bottom: 1px black solid;
+        div {
+            width: 110px;
+        }
+        p {
+            margin: 0;
+        }
+    }
 }
