--- a/src/components/global-component-styles.scss
+++ b/src/components/global-component-styles.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
 }
+
 .shadow {
   z-index: 1;
   position: absolute;
@@ -17,6 +18,7 @@
   justify-content: center;
   background-color: rgba($color: #000000, $alpha: 0.7);
   align-items: center;
+
   .wrapper {
     z-index: 2;
     width: 100%;
@@ -24,8 +26,9 @@
     background: -webkit-linear-gradient(top, #7579ff, #472581);
     background: -o-linear-gradient(top, #7579ff, #472581);
     background: -moz-linear-gradient(top, #7579ff, #472581);
-    background: linear-gradient(top, #7579ff, #472581);
+    background: linear-gradient(to top, #7579ff, #472581);
   }
+
   .modal {
     width: 100%;
     height: 100%;
@@ -33,7 +36,7 @@
     left: 0px;
     font-family: "Nunito-ExtraBold";
     src: local("Nunito-ExtraBold"),
-      url("../__shared/fonts/Nunito-ExtraBold.ttf") format("ttf");
+    url("../__shared/fonts/Nunito-ExtraBold.ttf") format("ttf");
     background: #9152f8;
     background: -webkit-linear-gradient(top, #7579ff, #472581);
     z-index: 1;
@@ -41,57 +44,70 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+
+
+
+    input {
+      color: white;
+    }
     * {
-      background-color: inherit;
+      background-color: transparent;
     }
+
     .modal-header {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        color: white;
-        height: 150px;
-        font-size: 25px;
-        padding-top: 50px;
-        img {
-            height: 60px;
-            margin-bottom: 40px;
-          }
+      width: 100%;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      color: white;
+      height: 150px;
+      font-size: 25px;
+      padding-top: 50px;
+
+      img {
+        height: 60px;
+        margin-bottom: 40px;
+      }
     }
+
     .modal-content {
-        width: 270px;
-        & div {
-            width: 100%;
-        }
-        .modal-input {
-            margin-top: 20px;
-            width: 100%;
+      width: 270px;
+
+      & div {
+        width: 100%;
+      }
+
+      .modal-input {
+        margin-top: 20px;
+        width: 100%;
         color: white;
 
-        }
+      }
     }
-    
-    
+
+
     .modal-footer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      div {
+        padding: 10px 15px 10px 15px;
+        width: 270px;
         display: flex;
         justify-content: center;
-        align-items: center;
-        div{
-            padding: 10px 15px 10px 15px;
-            width: 270px;
-            display: flex;
-            justify-content: center;
-            align-self: center;
-            color: white;
-            font-weight: 900;
-            border: 4px solid white;
-            margin-top: 20px;
-            font-size: 15px;
-        }
+        align-self: center;
+        color: white;
+        font-weight: 900;
+        border: 4px solid white;
+        margin-top: 20px;
+        font-size: 15px;
+      }
     }
-    
+
   }
 }
+
 .alertModal {
   position: fixed;
   background-color: #442342;
@@ -107,9 +123,21 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+
   p {
     color: white;
   }
-  
-
 }
+
+
+.msgWrapper {
+  overflow-y: scroll;
+  height: 80%;
+
+  .msgBlock {
+
+  }
+}
+
+
+
