--- a/src/pages/AdminPage/adminPages/index.module.scss
+++ b/src/pages/AdminPage/adminPages/index.module.scss
@@ -54,3 +54,13 @@
         }
     }
 }
+
+.TeamPage {
+    width: 100%;
+    .teamRow {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+}
