--- a/src/pages/AdminPage/adminPages/index.module.scss
+++ b/src/pages/AdminPage/adminPages/index.module.scss
@@ -1,20 +1,17 @@
 .TaskPage {
-    .taskWithHelps {
-        border-bottom: 1px black solid;
-        cursor: pointer;
-    }
-    .taskRow {
-        padding: 5px 20px;
+    .tasks {
         display: flex;
-        flex-direction: row;
-        div {
-            width: 300px;
-            font-size: 20px;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        .task {
+            margin: 30px;
+            img {
+                width: 240px;
+                height: 240px;
+                object-fit: cover;
+            }
         }
     }
-}
-.TaskPage .taskWithHelps:nth-child(2n) {
-    background: white;
 }
 
 %item {
@@ -63,4 +60,8 @@
         flex-direction: row;
         justify-content: space-around;
     }
+}
+
+.actionButton {
+    position: absolute;
 }
