--- a/src/components/global-component-styles.scss
+++ b/src/components/global-component-styles.scss
@@ -37,8 +37,8 @@
     font-family: "Nunito-ExtraBold";
     src: local("Nunito-ExtraBold"),
     url("../__shared/fonts/Nunito-ExtraBold.ttf") format("ttf");
-    background: #9152f8;
-    background: -webkit-linear-gradient(top, #7579ff, #472581);
+    background: url("../media/fon.png");
+    //background: -webkit-linear-gradient(top, #7579ff, #472581);
     z-index: 1;
     display: flex;
     flex-direction: column;
