--- a/src/pages/BriefingPage/index.module.scss
+++ b/src/pages/BriefingPage/index.module.scss
@@ -44,10 +44,11 @@
             color: white;
         }
     }
-    .startQuestLink {
+    .startQuestLink, .waitGame {
         margin-bottom: 25%;
         margin-left: 10%;
         color:purple;
         font-size: 20px;
     }
+
 }
