--- a/src/pages/TeamPage/index.module.scss
+++ b/src/pages/TeamPage/index.module.scss
@@ -1,5 +1,5 @@
 .teamPage {
-    background-color: #442342;
+    background: url('../../media/fon.png') 100% 100%;
     width: 100%;
     height: 100%;
     display: flex;
@@ -30,6 +30,7 @@
 
 .teamBlock {
     padding: 40px;
+    margin-top: 20px;
     height: 200px;
     background: url('./media/teamWindow.png') 100% 100%;
     background-size: cover;
@@ -49,12 +50,21 @@
 }
 
 .briefingLink {
-    background-color: #e06a89;
+    background-color: #442342;
+    border: 2px solid white;
     display: flex;
     justify-content: center;
+    width: 300px;
+    align-self: center;
+    margin-bottom: 50px;
     a {
         font-size: 30px;
         text-align: center;
         color: white;
     }
+}
+.activationWait {
+    color: white;
+    align-self: center;
+    font-size: 20px;
 }
