--- a/src/pages/FinishPage/index.module.scss
+++ b/src/pages/FinishPage/index.module.scss
@@ -9,6 +9,10 @@
   flex-direction: column;
   align-items: center;
   color: white;
+  background: url('../../media/fon.png') 100% 100%;
+  h1 {
+    color: white;
+  }
 }
 
 .topList {
