--- a/src/index.scss
+++ b/src/index.scss
@@ -28,7 +28,7 @@ code {
 }
 .spinner-page {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,5 +51,12 @@ input:focus {
 
 .borderBottomGray {
   border-bottom: 1px solid #d9d9d9!important;
+
+}
+
+.delete-admin {
+  position: absolute!important;
+  top: 0px;
+  right: 0px;
 
 }
