--- a/src/pages/QuestionPage/index.module.scss
+++ b/src/pages/QuestionPage/index.module.scss
@@ -97,7 +97,7 @@
     flex-direction: column;
     align-items: center;
     color: white;
-    img {
+    img, video {
       width: 300px;
     }
   }
