--- a/src/pages/AdminPage/adminPages/index.module.scss
+++ b/src/pages/AdminPage/adminPages/index.module.scss
@@ -49,6 +49,9 @@
         p {
             margin: 0;
         }
+        video {
+            width: 200px;
+        }
     }
 }
 
@@ -65,3 +68,4 @@
 .actionButton {
     position: absolute;
 }
+//
