--- a/src/pages/QuestionPage/index.module.scss
+++ b/src/pages/QuestionPage/index.module.scss
@@ -1,7 +1,7 @@
 .questionPage {
   background-color: #442342;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
